Preparation for 3.0 release w/ tests